# DilatioErosion_with_MedianFilter

./: CMakeLists.txt  Dilation_Erosion.txt  Median_filter.txt  README.md  main.cpp
CPU_impl/: cpu_impl.cpp  cpu_impl.h
GPU_Custom_libraries/: opening_closing.cl
Images/Inputs/Binary_Image/: image_1.pgm  image_2.pgm  image_3.pgm
Images/Inputs/SNP_Noise/: image_1.pgm  image_2.pgm
Images/Outputs/: opening_gpu_image.pgm  output_closing_cpu.pgm  output_dilation_bufferized_gpu.pgm  output_dilation_cpu.pgm  output_dilation_gpu_image.pgm  output_median_cpu.pgm  output_median_gpu_bufferized.pgm  output_median_gpu_image.pgm  output_opening_cpu.pgm
OpenCL/: OpenCLKernel.hpp
src/: dilation.cl  erosion.cl  median.cl  opening_closing.cl
